--- a/roach-server/templates/game.hbs
+++ b/roach-server/templates/game.hbs
@@ -1,3 +1,3 @@
 {{>header_partial}}
-{{game.id}} {{game.black.name}} vs {{game.white.name}} ({{game.game_type}}): {{game.outcome}}
+{{game.id}} {{game.black.name}} vs {{game.white.name}} ({{game.game_type}}): {{game.outcome.status}}
 {{>footer_partial}}
