--- a/roach-server/templates/player.hbs
+++ b/roach-server/templates/player.hbs
@@ -2,7 +2,7 @@
 {{player.name}} {{player.elo}}
 <ul>
 {{#each games}}
-    <li>{{this.id}} {{this.black.name}} vs {{this.white.name}} ({{this.game_type}}): {{this.outcome.status}}</li>
+    <li><a href="/game/{{this.id}}">{{this.black.name}} vs {{this.white.name}} ({{this.game_type}}): {{this.outcome.status}}</a></li>
 {{/each}}
 </ul>
 {{>footer_partial}}
