--- a/roach-server/templates/players.hbs
+++ b/roach-server/templates/players.hbs
@@ -1,7 +1,7 @@
 {{>header_partial}}
 <ul>
 {{#each players}}
-    <li>{{this.id}} {{this.name}} {{this.elo}}</li>
+    <li><a href="/player/{{this.id}}">{{this.id}} {{this.name}} {{this.elo}}</a></li>
 {{/each}}
 </ul>
 {{>footer_partial}}
