server: major improvements to views, add player statistics

--- a/roach-server/templates/footer_partial.hbs
+++ b/roach-server/templates/footer_partial.hbs
@@ -1,7 +1,3 @@
-<div class="footer">
-<a href="/">Home</a>
-<a href="/players">Players</a>
-<a href="/games">Games</a>
-</div>
+</main>
 </body>
 </html>
