--- a/roach-server/templates/games.hbs
+++ b/roach-server/templates/games.hbs
@@ -1,7 +1,3 @@
 {{>header_partial}}
-<ul>
-{{#each games}}
-    <li><a href="/game/{{this.id}}">{{this.id}} {{this.black.name}} vs {{this.white.name}} ({{this.game_type}}): {{this.outcome.status}}</a></li>
-{{/each}}
-</ul>
+{{>games_partial games=games}}
 {{>footer_partial}}
