--- a/roach-server/templates/header_partial.hbs
+++ b/roach-server/templates/header_partial.hbs
@@ -1,5 +1,61 @@
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
     <title>roach | {{title}}</title>
+    <style>
+    nav{
+        background:#fff;
+        -webkit-box-shadow:0 1px 2px rgba(99,114,130,0.06),0 3px 6px rgba(27,39,51,0.08);
+        box-shadow:0 1px 2px rgba(99,114,130,0.06),0 3px 6px rgba(27,39,51,0.08);
+        height:auto;
+        width:100%;
+        margin-bottom:10px;
+    }
+
+    nav ul{
+        padding-bottom:8px;
+        padding-top:8px;
+        padding-left:8px;
+        display: inline-block;
+        margin:0
+    }
+
+    nav .brand{
+        font-size:1.5rem;
+        text-align:center
+    }
+
+    nav li{
+        display:inline;
+        padding:16px
+    }
+
+    nav li.active a{
+        color:rgba(0,0,0,0.8) !important
+    }
+
+    nav li a:hover{
+        text-decoration:none;
+        color:rgba(0,0,0,0.8) !important
+    }
+
+    .hero{
+        border-bottom:1px 1px solid rgba(0,0,0,0.12);
+        border-top:0;
+        margin-bottom:16px
+    }
+
+    footer{
+        margin-bottom:0
+    }
+    </style>
 </head>
 <body>
+<nav>
+    <ul>
+        <li><a class="brand" href="/">roach</a></li>
+        <li><a href="/players">Players</a></li>
+        <li><a href="/games">Games</a></li>
+    </ul>
+</nav>
+<main>
