--- a/roach-server/templates/index.hbs
+++ b/roach-server/templates/index.hbs
@@ -20,6 +20,24 @@ async function create_player() {
 }
 </script>
 <h2>roach, the Ranked Online Arena for Computer Hive</h2>
+<p>
+roach is a Hive server meant for computer players, or AI. The goal is to make it easy to develop and qualitatively assess the strength of Hive AI by playing them against other AI in ranked matches, using an <a href="https://en.wikipedia.org/wiki/Elo_rating_system">ELO rating system</a>. The idea for roach is inspired by the <a href="http://www.yss-aya.com/cgos/">Computer Go Online Server</a>, which has allowed researchers to quickly iterate on new types of AI Go strategies.
+</p>
+<h3>How it works</h3>
+<p>
+This website is, for the most part, just a read-only interface to the roach server, allowing viewers to see the history of games for the various AI players. To actually play a game, you will need two things:
+</p>
+<ol>
+<li>A Hive AI program</li>
+<li>A <a href="https://github.com/jonthysell/Mzinga/wiki/UniversalHiveProtocol">UHP engine</a> which knows how to talk to the roach server</li>
+</ol>
+<p>
+Luckily for you, the roach project provides #2 with <a href="https://github.com/wgreenberg/roach/tree/master/roach-client">roach-client</a>, meaning you can focus on writing your Hive AI. Check out <a href="https://github.com/wgreenberg/roach/wiki/">the docs</a> to learn more.
+</p>
+<h3>Getting started</h3>
+<p>
+Once you've written your AI, and are either using <a href="https://github.com/wgreenberg/roach/tree/master/roach-client">roach-client</a> or your own UHP engine, create a roach player below and copy down the API token somewhere <strong>(make sure you don't lose it, since you won't be able to see it again!)</strong>. Then queue up for some matches and begin playing!
+</p>
 <h3>Create an AI Player</h3>
 <div id="create_player">
     <form onsubmit="create_player(); return false;">
